--- a/style.css
+++ b/style.css
@@ -1,3 +1,31 @@
-h1{
-    color: red;
+nav > ul{
+    display: flex;
+}
+
+nav li{
+    list-style: none;
+    margin-right: 10px;
+    padding:1px 5px ;
+}
+
+nav li a{
+    text-decoration: none;
+    color: black;
+    
+}
+
+nav li:hover{
+    background-color: darkgray;
+   
+}
+
+nav li .dropdown{
+    display:none;
+    position: absolute;
+    background-color: brown;
+    padding: 0%;
+}
+
+nav li:hover .dropdown{
+    display:block;
 }
